# loggly-search

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  loggly.rs  main.rs
