[package]
name = "loggly-search"
version = "0.1.0"
authors = ["Ayush Goyal <perfectayush@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
futures = "0.3"
reqwest = {version = "0.11.2", features = ['json']}
serde_json = "1.0.64"
tokio = {version = "1.4.0", features = ['full']}
